Add basic functions

--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <title>Document</title>
 </head>
 <body>
-    Hello World!
+    <button>Rock</button>
+    <button>Paper</button>
+    <button>Scissors</button>
+    <div>
+        <p id="player-score"></p>
+        <p id="computer-score"></p>
+        <p id="result"></p>
+    </div>
 </body>
 </html>
